# BioPortal-to-KGX

./: .gitignore  LICENSE  README.md  get_all_counts.sh  get_all_transform_stats.sh  get_all_types.sh  get_biolink_stats.sh  get_iris.sh  get_umls_stats.sh  namespace_maps.tsv  pyproject.toml  run.py  setup.py  tox.ini
.github/workflows/: main.yml
4store_to_kgx/: run.py
bioportal_to_kgx/: bioportal.py  bioportal_utils.py  functions.py  robot_utils.py  stats.py
fourstore_to_kgx/: functions.py
mappings/: ordo-biolink-all-0.1.sssom.tsv  skos-biolink-all-1.0.sssom.tsv  sty-biolink-all-0.1.sssom.tsv  sty-biolink-exact-0.1.sssom.tsv
post_setup/: post_setup.py
prefixes/: bioportal-preferred-prefixes.tsv  bioportal-prefixes-curated.tsv  bioportal-prefixes-readme.md  bioportal-prefixes.tsv
stats/: biolink_stats.tsv
tests/: __init__.py  test_run.py
